--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body {
 }
 
 /* خلفيات الصفحات */
-.page-massage { background: url('../dart/image/مساج.jpg') center/cover fixed; }
-.page-manicure { background: url('../dart/image/مناكير.jpg') center/cover fixed; }
-.page-pedicure { background: url('../dart/image/بدكير.webp') center/cover fixed; }
-.page-Moroccan_bath { background: url('../dart/image/حمام.jpg') center/cover fixed; }
+.page-massage { background: url('../image/مساج.jpg') center/cover fixed; }
+.page-manicure { background: url('../image/مناكير.jpg') center/cover fixed; }
+.page-pedicure { background: url('../image/بدكير.webp') center/cover fixed; }
+.page-Moroccan_bath { background: url('../image/حمام.jpg') center/cover fixed; }
 
 /* الترويسة */
 header {
@@ -115,4 +115,5 @@ main p {
   .lang-btn {
     padding: 0.3rem 0.7rem;
   }
+
 }
